--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0px;
-    color: black;
+    color: rgb(255, 255, 255);
+    font-family: sans-serif;
 }
 
 .mainContainer {
@@ -9,12 +10,12 @@ body {
 }
 
 .subContainer{
-    width: 35%;
+    width: 40%;
     min-height: 100vh;
 }
 
 .subContainer2 {
-    width: 65%;
+    width: 60%;
     height: 100vh;
 }
 
@@ -54,27 +55,43 @@ body {
 
 #form {
     height: 30%;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(43, 39, 46);
+    border-bottom: 1px solid rgb(255, 255, 255);
+    border-top: 1px solid rgb(255, 255, 255);
+    box-sizing: border-box;
+
 }
 
 form {
+    margin-left: 5%;
     padding: 60px 20px;
     border: none;
+}
+
+legend {
+    font-size: 1.2rem;
 }
 
 fieldset {
     border: none;
     height: 30%;
+
 }
 
 input {
-    border-radius: 5px;
+    color: white;
+    background-color: rgb(43, 39, 46);
+    font-size: 18px;
+    border: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.452);
     box-sizing: border-box;
+    padding: 5px;
 }
 
 label {
     display: block;
 }
+
 
 .formSection {
     display: flex;
@@ -82,10 +99,18 @@ label {
     gap: 10%;
 }
 
+.formPart {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+
+
 #header,
 #bottomForm {
     height: 35%;
-    background-color:rgb(235, 235, 235);
+    background-color:rgb(43, 39, 46);
 }
 
 #bottomForm {
@@ -93,8 +118,45 @@ label {
     padding: 3%;
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 
 button {
     width: 25%;
+    height: 15%;
+    color: white;
+    background-color: rgb(31, 27, 34)
+}
+
+#header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    
+}
+
+h2 {
+    width: 80%;
+    font-size: 3rem;
+}
+
+#alreadyAccount,
+button {
+    margin-left: 5%;
+}
+
+button {
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 10px;
+}
+
+a {
+    color: rgb(211, 152, 223);
+}
+
+input:invalid {
+    border-bottom: 1px solid red;
 }
