--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,14 @@ body {
 
 .subContainer{
     width: 40%;
-    min-height: 100vh;
+    
 }
 
 .subContainer2 {
     width: 60%;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 .subContainer2 > div {
@@ -27,6 +29,7 @@ body {
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    
 
 }
 
@@ -54,7 +57,10 @@ body {
 }
 
 #form {
-    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-grow:1;
     background-color: rgb(43, 39, 46);
     border-bottom: 1px solid rgb(255, 255, 255);
     border-top: 1px solid rgb(255, 255, 255);
@@ -86,6 +92,7 @@ input {
     border-bottom: 1px solid rgba(255, 255, 255, 0.452);
     box-sizing: border-box;
     padding: 5px;
+    width:100%;
 }
 
 label {
@@ -109,7 +116,7 @@ label {
 
 #header,
 #bottomForm {
-    height: 35%;
+    flex-grow: 1;
     background-color:rgb(43, 39, 46);
 }
 
@@ -139,7 +146,7 @@ button {
 
 h2 {
     width: 80%;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 #alreadyAccount,
