--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
     flex-direction: column;
     justify-content: center;
     flex-grow:1;
-    background-color: rgb(43, 39, 46);
+    background-color: rgb(31, 28, 32);
     border-bottom: 1px solid rgb(255, 255, 255);
     border-top: 1px solid rgb(255, 255, 255);
     box-sizing: border-box;
@@ -75,7 +75,9 @@ form {
 }
 
 legend {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+    margin-left: -2.5px;
+    margin-bottom: 20px;
 }
 
 fieldset {
@@ -86,14 +88,25 @@ fieldset {
 
 input {
     color: white;
-    background-color: rgb(43, 39, 46);
+    background-color: rgb(31, 28, 32);
     font-size: 18px;
     border: none;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.452);
+    border-bottom: 1px solid white;
     box-sizing: border-box;
     padding: 5px;
     width:100%;
 }
+
+
+input:focus {
+    outline: none;
+    border: 1px solid rgb(82, 150, 82);
+}
+
+input:invalid:focus {
+   border: 1px solid red;
+}
+
 
 label {
     display: block;
@@ -117,7 +130,7 @@ label {
 #header,
 #bottomForm {
     flex-grow: 1;
-    background-color:rgb(43, 39, 46);
+    background-color:rgb(31, 28, 32);
 }
 
 #bottomForm {
@@ -125,14 +138,19 @@ label {
     padding: 3%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    align-items: center;
+    gap: 30px;
 }
 
 button {
-    width: 25%;
-    height: 15%;
+    margin-top: 10px;
+    width: 30%;
+    height: 20%;
     color: white;
-    background-color: rgb(31, 27, 34)
+    background-color: rgb(31,28,32);
+    border:1px solid rgb(255, 255, 255);
+    border-radius: 5px;
+    font-size: 1.2rem;
 }
 
 #header {
@@ -149,21 +167,8 @@ h2 {
     font-size: 2.5rem;
 }
 
-#alreadyAccount,
-button {
-    margin-left: 5%;
-}
-
-button {
-    font-size: 1.2rem;
-    border: none;
-    border-radius: 10px;
-}
-
 a {
     color: rgb(211, 152, 223);
 }
 
-input:invalid {
-    border-bottom: 1px solid red;
-}
+
