--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,10 @@ fieldset {
 
 }
 
+.requiredStar {
+    color: red;
+}
+
 input {
     color: white;
     background-color: rgb(31, 28, 32);
@@ -93,7 +97,7 @@ input {
     border: none;
     border-bottom: 1px solid white;
     box-sizing: border-box;
-    padding: 5px;
+    padding: 5px 0;
     width:100%;
 }
 
